fix css z-index header

--- a/front/src/Header/header.css
+++ b/front/src/Header/header.css
@@ -17,7 +17,7 @@ body.modal-open {
   top: 0;
   float: left;
   width: 100%;
-  z-index: 1000;
+  z-index: 2000;
   display: flex;
   align-items: center;
 }
